objects/Account_Configuration__mdt.object
<CustomObject>
    <description>PCIPAL-NVM. This lists the payment flows that have been configured on the Agent Assist service.</description>
    <fields>
        <fullName>AccountConfigurationId__c</fullName>
        <label>AccountConfigurationId</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyNames__c</fullName>
        <label>CurrencyNames</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Pal_Flow_ID__c</fullName>
        <label>PCI Pal Flow ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Flow__c</fullName>
        <label>Payment Flow</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Configuration</label>
    <listViews>
        <fullName>AllValues</fullName>
        <columns>Payment_Flow__c</columns>
        <columns>AccountConfigurationId__c</columns>
        <columns>PCI_Pal_Flow_ID__c</columns>
        <columns>BU__c</columns>
        <columns>Currency__c</columns>
        <columns>CurrencyNames__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllValues</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Account Configurations</pluralLabel>
</CustomObject>